--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 
 [dependencies]
 async-channel = "1.9.0"
-async-std = "1.12.0"
+async-std = { version = "1.10.0", features = ["attributes", "unstable"] }
 futures = "0.3.28"
 nix = "0.24"
 pin-utils = "0.1.0"
